--- a/public/css/custom/layouts/main.css
+++ b/public/css/custom/layouts/main.css
@@ -259,14 +259,14 @@ button.bg-alternate:focus {
     background-color: #5c3a69 !important;
 }
 :root {
-    --blue: #007bff;
+    --blue: #1462B0;
     --indigo: #6610f2;
     --purple: #6f42c1;
     --pink: #e83e8c;
-    --red: #dc3545;
+    --red: #E8002E;
     --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
+    --yellow: #E96012;
+    --green: #0ac282;
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
@@ -3576,7 +3576,7 @@ input[type="button"].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #007bff;
+    border-color: #1462B0;
     background-color: #3f6ad8;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3632,7 +3632,7 @@ input[type="button"].btn-block {
     background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCA4IDgnPjxwYXRoIGZpbGw9JyNmZmYnIGQ9J002LjU2NC43NWwtMy41OSAzLjYxMi0xLjUzOC0xLjU1TDAgNC4yNiAyLjk3NCA3LjI1IDggMi4xOTN6Jy8+PC9zdmc+);
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-    border-color: #007bff;
+    border-color: #1462B0;
     background-color: #3f6ad8;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4590,7 +4590,7 @@ input[type="button"].btn-block {
     padding: 0.5rem 0.75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #007bff;
+    color: #1462B0;
     background-color: #fff;
     border: 1px solid #dee2e6;
 }
@@ -4625,7 +4625,7 @@ input[type="button"].btn-block {
     z-index: 1;
     color: #fff;
     background-color: #3f6ad8;
-    border-color: #007bff;
+    border-color: #1462B0;
 }
 .page-item.disabled .page-link,
 .pagination .disabled.page-number .page-link {
@@ -5033,7 +5033,7 @@ a.badge-alternate:focus {
     z-index: 2;
     color: #fff;
     background-color: #3f6ad8;
-    border-color: #007bff;
+    border-color: #1462B0;
 }
 .list-group-flush .list-group-item {
     border-right: 0;
@@ -13532,7 +13532,7 @@ legend {
     padding: 0.5rem 0.75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #007bff;
+    color: #1462B0;
     background-color: #fff;
     border: 1px solid #dee2e6;
 }
@@ -13564,7 +13564,7 @@ legend {
     z-index: 1;
     color: #fff;
     background-color: #3f6ad8;
-    border-color: #007bff;
+    border-color: #1462B0;
 }
 .pagination li.active a:hover {
     color: #fff;
